# thesis

./: .gitignore  README.md
Design Diagrams/: rclc_data_diagram.txt  rclc_executor_sequence_diagram.txt  rclc_let_intermediate_node_sequence_diagram.txt  rclc_let_internal_buffer_activity_diagram.txt  rclc_let_internal_buffer_data_diagram.txt  rclc_let_internal_buffer_sequence_diagram.txt  rclc_overrun_handling_sequence_diagram.txt
DesignDiagram/: rclc_data_diagram.txt
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: Message.msg  SequenceMsg.msg
custom_interfaces/srv/: Service.srv
my_app_startup/: CMakeLists.txt  package.xml
my_app_startup/launch/: demo.launch.py
rclc/my_rclc/: CMakeLists.txt
rclc/rclc/: CMakeLists.txt
rclc/rclc/include/rclc/: executor.h  executor_handle.h
rclc/rclc/src/rclc/: executor.c
rclc/rclc_app/: CMakeLists.txt  package.xml
rclc/rclc_app/include/: utilities.h
rclc/rclc_app/src/: experiment1.c  experiment2.c  experiment3.c  experiment4.c  experiment4_1.c  experiment4_2.c  my_app.c  test.c  utilities.c
rclc_exp/: CMakeLists.txt  README.md  package.xml
rclc_exp/include/: my_node.h  my_node_rclc.h  utilities.h
rclc_exp/src/: automated_test.c  automated_test_rclc.c  config.txt  esp32_comm_test.c  esp32_test.c  exp8.c  exp9.c  exp_cb_execute_order.c  exp_let_qos.c  exp_multi_thread_single_core.c  exp_multi_thread_single_core_let.c  exp_sequential_always.c  exp_single_thread_multi_core.c  exp_single_thread_single_core.c  exp_trigger_all.c  generate_json.py  let_calculation.py  output.json  receiving_node.c  simulation.py  simulation_test1.py  simulation_test2.py  test.c  test1.c  test1_rclc.c  test2.c  test3.c  test_sleep_time.c  utilities.c
rclc_exp/src/config_files/: config0.txt  config1.txt  config10.txt  config2.txt  config3.txt  config4.txt  config5.txt  config6.txt  config7.txt  config8.txt  config9.txt  generate_config.py  run_all.sh
rclc_exp/src/config_files/varied_let/: config1.txt  config10.txt  config2.txt  config3.txt  config4.txt  config5.txt  config6.txt  config7.txt  config8.txt  config9.txt
rclc_exp/src/config_files/varied_pub_num/: config1.txt  config10.txt  config2.txt  config3.txt  config4.txt  config5.txt  config6.txt  config7.txt  config8.txt  config9.txt
rclc_exp/src/config_files/varied_sub_num/: config1.txt  config10.txt  config3.txt  config4.txt  config5.txt  config6.txt  config7.txt  config8.txt  config9.txt
rclc_exp/src/config_files/varied_timer_num/: config1.txt  config10.txt  config2.txt  config3.txt  config4.txt  config5.txt  config6.txt  config7.txt  config8.txt  config9.txt
rclc_let/: CMakeLists.txt  README.md  package.xml
rclc_let/include/rclc/: buffer.h  executor.h  executor_handle.h  executor_let.h  let_output_node.h  publisher.h  sleep.h  types.h
rclc_let/rclc/: CMakeLists.txt
rclc_let/src/rclc/: buffer.c  executor.c  executor_handle.c  executor_let.c  let_output_node.c  publisher.c  sleep.c  timer.c
rclc_let/test/rclc/: test_publisher.cpp
rclcpp_app/: CMakeLists.txt  package.xml
rclcpp_app/include/: thread_utilities.hpp
rclcpp_app/src/: experiment1.cpp  experiment2.cpp  experiment3.cpp  my_app.cpp  my_node_utilities.cpp
rclcpp_exp/: CMakeLists.txt  README.md  package.xml
rclcpp_exp/include/: my_node_utilities.hpp  thread_utilities.hpp
rclcpp_exp/src/: exp_cb_execute_order.cpp  exp_multi_thread_single_core.cpp  exp_single_thread_single_core.cpp  my_node_utilities.cpp
result/: collect_proc_data.sh  esp32_test.json  exp3.txt  exp4_100_20_c_output.txt  exp4_100_cpp_output.txt  exp4_1_100_20_c_output.txt  exp4_1_100_cpp_output.txt  exp4_1_new_100_20_c_output.txt  exp4_2_100_20_c_output.txt  exp5_default_cpp.txt  exp5_ep50_Periodic_cpp.txt  exp5_ep50_nonPeriodic_cpp.txt  exp7_100_0_c_output.txt  exp7_100_40_c_output.txt  exp7_ep50_let_c.txt  exp7_ep50_nolet_c.txt  exp7_tp100_epdynamic_let_c.txt  exp7_tp10_ed15000_epdynamic_let_c.txt  exp7_tp10_ed15000_epdynamic_nolet_c.txt  exp7_tp10_ep50_let_c.txt  exp7_tp10_epdynamic_let_c.txt  exp7_tp10_epdynamic_nolet_c.txt  exp8.json  exp9.json  export_csv.py  extract_overhead_data.py  extract_overhead_data_pub_new.py  extract_overhead_data_varied_pub.py  extract_overhead_data_varied_sub.py  extract_overhead_data_varied_timer.py  memory_profile_test1_intermediateNode.txt  memory_profile_test1_internal_buffer.txt  output_LET.txt  output_LET_800kb.txt  output_noLET.txt  output_noLET_800kb.txt  overhead_profile_per_message_size.txt  overhead_profile_varied_let.txt  overhead_profile_varied_msg_size.txt  overhead_profile_varied_period.txt  (+23 more)
result/automated_test_json/: automated_test1.json  automated_test10.json  automated_test2.json  automated_test3.json  automated_test4.json  automated_test5.json  automated_test6.json  automated_test7.json  automated_test9.json
result/automated_test_json/varied_let/: automated_test10.json
result/automated_test_json/varied_pub_num/: automated_test1.json  automated_test10.json  automated_test3.json  automated_test4.json  automated_test5.json  automated_test6.json  automated_test7.json  automated_test8.json  automated_test9.json
result/automated_test_json/varied_sub_num/: automated_test1.json  automated_test10.json  automated_test3.json  automated_test4.json  automated_test5.json  automated_test6.json  automated_test7.json  automated_test8.json  automated_test9.json
result/automated_test_json/varied_timer_num/: automated_test1.json  automated_test10.json  automated_test2.json  automated_test3.json  automated_test4.json  automated_test5.json  automated_test6.json  automated_test7.json  automated_test8.json  automated_test9.json
result/automated_test_result/varied_msg_size/: data_let_8B.txt  data_nolet.csv  data_nolet_16000B.txt  data_nolet_1600B.txt  data_nolet_200000B.txt  data_nolet_24B.txt  data_nolet_3200B.txt  data_nolet_400000B.txt  data_nolet_40000B.txt  data_nolet_400B.txt  data_nolet_4800B.txt  data_nolet_800000B.txt  data_nolet_80000B.txt  data_nolet_8000B.txt  data_nolet_800B.txt  data_nolet_8B.txt
result/automated_test_result/varied_pub_num/: data1_nolet.txt
(+80 files in other folders)
